# project-skeleton

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
include/project/: Calculator.hpp
src/: CMakeLists.txt  Calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator_addition.cpp
tools/: run_asan.sh  run_callgrind.sh  run_kcachegrind.sh
